- Small fixes in model evaluation (notebook and utils.py) - Fixed image loading order

--- a/notebooks/Evaluation - Multiple Runs.ipynb
+++ b/notebooks/Evaluation - Multiple Runs.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "#Path to the runs to load\n",
-    "folder = \"./saved_models/test/\""
+    "folder = \"./saved_models/test/\"\n",
+    "folder = \"D:/Arbeit/Results/fixmatch_results/models/eurosat_rgb/\""
    ]
   },
   {
@@ -49,7 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoints, run_args = get_model_checkpoints(folder)"
+    "checkpoints, run_args = get_model_checkpoints(folder)\n",
+    "[print(_.split(\"\\\\\")[1]) for _ in checkpoints];"
    ]
   },
   {
@@ -68,17 +70,17 @@
     "results = []\n",
     "for checkpoint, args in zip(checkpoints,run_args):\n",
     "    print(\"------------ RUNNING \", checkpoint, \" -----------------\")\n",
-    "    \n",
+    "    print(args)\n",
     "    args[\"batch_size\"] = 256\n",
     "    args[\"data_dir\"] = \"./data/\"\n",
     "    args[\"use_train_model\"] = False\n",
-    "    args[\"load_path\"] = checkpoints[0]\n",
+    "    args[\"load_path\"] = checkpoint\n",
     "    \n",
     "    checkpoint_path = os.path.join(args[\"load_path\"])\n",
-    "    checkpoint = torch.load(checkpoint_path)\n",
+    "    checkpoint = torch.load(checkpoint_path,map_location='cuda:0')\n",
     "    load_model = (checkpoint[\"train_model\"] if args[\"use_train_model\"] else checkpoint[\"eval_model\"])\n",
     "\n",
-    "    _net_builder = net_builder(args[\"net\"],None,{})\n",
+    "    _net_builder = net_builder(args[\"net\"],False,{})\n",
     "\n",
     "    net = _net_builder(num_classes=args[\"num_classes\"])\n",
     "    net.load_state_dict(load_model)\n",
@@ -90,8 +92,7 @@
     "    eval_dset = _eval_dset.get_dset()\n",
     "\n",
     "    eval_loader = get_data_loader(eval_dset, args[\"batch_size\"], num_workers=1)\n",
-    "    label_encoding = _eval_dset.label_encoding\n",
-    "    inv_transf = _eval_dset.inv_transform\n",
+    "\n",
     "    \n",
     "    print(\"------------ PREDICTING TESTSET -----------------\")\n",
     "    \n",
@@ -132,6 +133,13 @@
     "print(big_df)\n",
     "big_df.to_csv(folder + \"_test_results.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
