Fixed notebook to work in Linux and Windows.

--- a/notebooks/Evaluation - Multiple Runs.ipynb
+++ b/notebooks/Evaluation - Multiple Runs.ipynb
@@ -51,7 +51,10 @@
    "outputs": [],
    "source": [
     "checkpoints, run_args = get_model_checkpoints(folder)\n",
-    "[print(_.split(\"/\")[1]) for _ in checkpoints];"
+    "if os.name == 'nt':\n",
+    "       [print(_.split(\"\\\\\")[1]) for _ in checkpoints];\n",
+    "else:\n",
+    "       [print(_.split(\"/\")[1]) for _ in checkpoints];"
    ]
   },
   {
