Fixed notebook after moving num_channels and num_classes parameters into ssl_dataset.

--- a/notebooks/Evaluation - Multiple Runs.ipynb
+++ b/notebooks/Evaluation - Multiple Runs.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#Path to the runs to load\n",
     "csv_folder = \"/home/gabrielemeoni/project/SSLRS/test\"\n",
-    "folder = \"/scratch/fixmatch_results/nr_of_labels_supervised/eurosat_rgb\""
+    "folder = \"/scratch/fixmatch_results/nr_of_labels/eurosat_rgb/\""
    ]
   },
   {
@@ -82,17 +82,17 @@
     "    checkpoint_path = os.path.join(args[\"load_path\"])\n",
     "    checkpoint = torch.load(checkpoint_path,map_location='cuda:0')\n",
     "    load_model = (checkpoint[\"train_model\"] if args[\"use_train_model\"] else checkpoint[\"eval_model\"])\n",
-    "\n",
     "    _net_builder = net_builder(args[\"net\"],False,{})\n",
-    "\n",
-    "    net = _net_builder(num_classes=args[\"num_classes\"])\n",
+    "    _eval_dset = SSL_Dataset(name=args[\"dataset\"], train=False, data_dir=args[\"data_dir\"], seed=args[\"seed\"])\n",
+    "    eval_dset = _eval_dset.get_dset()\n",
+    "    net = _net_builder(num_classes=_eval_dset.num_classes, in_channels=_eval_dset.num_channels)\n",
     "    net.load_state_dict(load_model)\n",
     "    if torch.cuda.is_available():\n",
     "        net.cuda()\n",
     "    net.eval()\n",
     "\n",
-    "    _eval_dset = SSL_Dataset(name=args[\"dataset\"], train=False, data_dir=args[\"data_dir\"], seed=args[\"seed\"])\n",
-    "    eval_dset = _eval_dset.get_dset()\n",
+    "    \n",
+    "    \n",
     "\n",
     "    eval_loader = get_data_loader(eval_dset, args[\"batch_size\"], num_workers=1)\n",
     "    label_encoding = _eval_dset.label_encoding\n",
