--- a/notebooks/Evaluation - Multiple Runs.ipynb
+++ b/notebooks/Evaluation - Multiple Runs.ipynb
@@ -24,7 +24,7 @@
     "from datasets.data_utils import get_data_loader\n",
     "from utils import get_model_checkpoints\n",
     "from utils import net_builder\n",
-    "from utils import clean_results_dict"
+    "from utils import clean_results_df"
    ]
   },
   {
@@ -35,8 +35,8 @@
    "source": [
     "#Path to the runs to load\n",
     "csv_folder = \"/home/gabrielemeoni/project/SSLRS/test\"\n",
-    "folder = \"/scratch/fixmatch_results/weight_decay/eurosat_rgb/\"\n",
-    "sort_criterion = \"net\" # Accepted net, numlabels"
+    "folder = \"/scratch/fixmatch_results/nr_of_labels_supervised/eurosat_rgb/\"\n",
+    "sort_criterion = \"numlabels\" # Accepted net, numlabels"
    ]
   },
   {
@@ -138,9 +138,16 @@
     "    df = df.set_index(\"dataset\")\n",
     "    big_df = big_df.append(df)\n",
     "print(big_df)\n",
-    "small_df = pd.DataFrame.from_dict(clean_results_dict(big_df, folder,sort_criterion))\n",
+    "small_df = clean_results_df(big_df, folder,sort_criterion)\n",
     "small_df.to_csv(csv_folder + \"_test_results.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
