Added filter depending on "seed_wanted" Removed seed filter from clean_results_df function and from the csv

--- a/notebooks/Evaluation - Multiple Runs.ipynb
+++ b/notebooks/Evaluation - Multiple Runs.ipynb
@@ -35,8 +35,9 @@
    "source": [
     "#Path to the runs to load\n",
     "csv_folder = \"/home/gabrielemeoni/project/SSLRS/test\"\n",
-    "folder = \"/scratch/fixmatch_results/nr_of_labels_supervised/eurosat_rgb/\"\n",
-    "sort_criterion = \"numlabels\" # Accepted net, numlabels"
+    "folder = \"/scratch/fixmatch_results/nr_of_labels/eurosat_rgb/\"\n",
+    "sort_criterion = \"numlabels\" # Accepted net, numlabels\n",
+    "seed_wanted = 1 # Seed wanted (the others will be filtered)"
    ]
   },
   {
@@ -80,43 +81,43 @@
     "    args[\"data_dir\"] = \"./data/\"\n",
     "    args[\"use_train_model\"] = False\n",
     "    args[\"load_path\"] = checkpoint\n",
+    "    if args[\"seed\"] == seed_wanted:\n",
+    "        checkpoint_path = os.path.join(args[\"load_path\"])\n",
+    "        checkpoint = torch.load(checkpoint_path,map_location='cuda:0')\n",
+    "        load_model = (checkpoint[\"train_model\"] if args[\"use_train_model\"] else checkpoint[\"eval_model\"])\n",
+    "        _net_builder = net_builder(args[\"net\"],False,{})\n",
+    "        _eval_dset = SSL_Dataset(name=args[\"dataset\"], train=False, data_dir=args[\"data_dir\"], seed=args[\"seed\"])\n",
+    "        eval_dset = _eval_dset.get_dset()\n",
+    "        net = _net_builder(num_classes=_eval_dset.num_classes, in_channels=_eval_dset.num_channels)\n",
+    "        net.load_state_dict(load_model)\n",
+    "        if torch.cuda.is_available():\n",
+    "            net.cuda()\n",
+    "        net.eval()\n",
     "    \n",
-    "    checkpoint_path = os.path.join(args[\"load_path\"])\n",
-    "    checkpoint = torch.load(checkpoint_path,map_location='cuda:0')\n",
-    "    load_model = (checkpoint[\"train_model\"] if args[\"use_train_model\"] else checkpoint[\"eval_model\"])\n",
-    "    _net_builder = net_builder(args[\"net\"],False,{})\n",
-    "    _eval_dset = SSL_Dataset(name=args[\"dataset\"], train=False, data_dir=args[\"data_dir\"], seed=args[\"seed\"])\n",
-    "    eval_dset = _eval_dset.get_dset()\n",
-    "    net = _net_builder(num_classes=_eval_dset.num_classes, in_channels=_eval_dset.num_channels)\n",
-    "    net.load_state_dict(load_model)\n",
-    "    if torch.cuda.is_available():\n",
-    "        net.cuda()\n",
-    "    net.eval()\n",
-    "\n",
+    "        \n",
+    "        \n",
     "    \n",
+    "        eval_loader = get_data_loader(eval_dset, args[\"batch_size\"], num_workers=1)\n",
+    "        label_encoding = _eval_dset.label_encoding\n",
+    "        inv_transf = _eval_dset.inv_transform\n",
     "    \n",
-    "\n",
-    "    eval_loader = get_data_loader(eval_dset, args[\"batch_size\"], num_workers=1)\n",
-    "    label_encoding = _eval_dset.label_encoding\n",
-    "    inv_transf = _eval_dset.inv_transform\n",
-    "\n",
-    "    \n",
-    "    print(\"------------ PREDICTING TESTSET -----------------\")\n",
-    "    \n",
-    "    images, labels, preds = [],[],[]\n",
-    "    with torch.no_grad():\n",
-    "        for image, target in tqdm(eval_loader):\n",
-    "            image = image.type(torch.FloatTensor).cuda()\n",
-    "            logit = net(image)\n",
-    "            for idx,img in enumerate(image):\n",
-    "                images.append(inv_transf(img.transpose(0,2).cpu().numpy()).transpose(0,2).numpy())\n",
-    "            preds.append(logit.cpu().max(1)[1])\n",
-    "            labels.append(target)\n",
-    "    labels = torch.cat(labels).numpy()\n",
-    "    preds = torch.cat(preds).numpy()\n",
-    "    test_report = classification_report(labels, preds, target_names=label_encoding, output_dict=True)\n",
-    "    test_report[\"params\"] = args\n",
-    "    results.append(test_report)"
+    "        \n",
+    "        print(\"------------ PREDICTING TESTSET -----------------\")\n",
+    "        \n",
+    "        images, labels, preds = [],[],[]\n",
+    "        with torch.no_grad():\n",
+    "            for image, target in tqdm(eval_loader):\n",
+    "                image = image.type(torch.FloatTensor).cuda()\n",
+    "                logit = net(image)\n",
+    "                for idx,img in enumerate(image):\n",
+    "                    images.append(inv_transf(img.transpose(0,2).cpu().numpy()).transpose(0,2).numpy())\n",
+    "                preds.append(logit.cpu().max(1)[1])\n",
+    "                labels.append(target)\n",
+    "        labels = torch.cat(labels).numpy()\n",
+    "        preds = torch.cat(preds).numpy()\n",
+    "        test_report = classification_report(labels, preds, target_names=label_encoding, output_dict=True)\n",
+    "        test_report[\"params\"] = args\n",
+    "        results.append(test_report)"
    ]
   },
   {
