Fixed wrong padding ratio to 12.5%.

--- a/notebooks/Augmentation_notebook.ipynb
+++ b/notebooks/Augmentation_notebook.ipynb
@@ -72,7 +72,7 @@
     "            [\n",
     "                transforms.ToTensor(),\n",
     "                transforms.RandomHorizontalFlip(),\n",
-    "                transforms.RandomCrop(64, padding=4)\n",
+    "                transforms.RandomAffine(0,translate=(0,0.125))\n",
     "            ]\n",
     "        )\n",
     "    img = transform(img).permute(1, 2,0)\n",
