Fixed bug preventing the plot of the original image.

--- a/notebooks/Augmentation_notebook.ipynb
+++ b/notebooks/Augmentation_notebook.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path=\"../data/EuroSAT_RGB/PermanentCrop/PermanentCrop_12.jpg\" #img path\n",
+    "img_path=\"../data/EuroSAT_RGB/Highway/Highway_61.jpg\" #img path\n",
     "augmented_dir=\"..\"\n",
     "augmentation_type = \"strong\" #Supported: strong, weak\n",
     "plot_info = False #If True, numerical grid and image name are saved in the final picture"
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strong_augmentation_wanted=[\"Sharpness\", \"ShearX\", \"Equalize\"] "
+    "strong_augmentation_wanted=[\"AutoContrast\", \"Solarize\", \"Equalize\"] "
    ]
   },
   {
@@ -95,8 +95,7 @@
    "source": [
     "image_name = img_path[img_path.rfind('/')+1:img_path.rfind('.')] #finding image name\n",
     "plt.title(\"Original image: \"+ str(image_name), fontsize=14, fontweight='bold')\n",
-    "plt.imshow(img)\n",
-    "plt.close()"
+    "plt.imshow(img)"
    ]
   },
   {
@@ -148,6 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.close()\n",
     "fig = plt.imshow(img)\n",
     "if plot_info:\n",
     "    plt.title(\"Augmented image: \"+ str(image_name), fontsize=14, fontweight='bold')\n",
