- Added requested comment

--- a/notebooks/Evaluation - Class F1 Plot.ipynb
+++ b/notebooks/Evaluation - Class F1 Plot.ipynb
@@ -33,9 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Path to the runs to load\n",
-    "csv_folder = R\"D:\\Arbeit\\Results\\fixmatch_results\\F1 Class plot/\"\n",
-    "folder = R\"D:\\Arbeit\\Results\\fixmatch_results\\F1 Class plot/eurosat_rgb/\"\n",
+    "csv_folder = R\"D:\\Arbeit\\Results\\fixmatch_results\\F1 Class plot/\" #Path where tmp csv files are stored\n",
+    "folder = R\"D:\\Arbeit\\Results\\fixmatch_results\\F1 Class plot/eurosat_rgb/\" #Path to the runs to load \n",
     "sort_criterion = \"numlabels\" # Accepted net, numlabels\n",
     "seed_wanted = 0 # Seed wanted (the others will be filtered)"
    ]
