- Added visualization methods - Fontsize changes in Fig 3 - Updated gitignore - Added saliency notebook

--- a/notebooks/Evaluation - Class F1 Plot.ipynb
+++ b/notebooks/Evaluation - Class F1 Plot.ipynb
@@ -172,14 +172,14 @@
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
     "sns.set()\n",
-    "sns.set(font_scale=2)  # crazy big\n",
+    "sns.set(font_scale=3)  # crazy big\n",
     "with sns.plotting_context():\n",
     "    p = sns.catplot(x=\"F1 Score\", y=\"Class\", hue=\"# of labels\", data=l, kind=\"bar\",palette=\"crest\",height=10,aspect=1.25)\n",
     "    # p.set_xticklabels(rotation=90)\n",
     "    p.set(xlim=[0.4,1.01])\n",
     "\n",
     "    # p.set(xticks=[0.4,0.6,0.8,1.0])\n",
-    "plt.savefig(\"Class F1 Plot.pdf\")"
+    "plt.savefig(\"class_f1.pdf\")"
    ]
   },
   {
